@@ -1685,7 +1685,7 @@ class testFormItem extends CLegacyWebTest {
 					'history' => 3599,
 					'error_msg' => 'Cannot add item',
 					'errors' => [
-						'Incorrect value for field "history": must be between "3600" and "788400000".'
+						'Incorrect value for field "history": value must be one of 0, 3600-788400000.'
 					]
 				]
 			],
@@ -1698,7 +1698,7 @@ class testFormItem extends CLegacyWebTest {
 					'history' => 788400001,
 					'error_msg' => 'Cannot add item',
 					'errors' => [
-						'Incorrect value for field "history": must be between "3600" and "788400000".'
+						'Incorrect value for field "history": value must be one of 0, 3600-788400000.'
 					]
 				]
 			],
@@ -1750,7 +1750,7 @@ class testFormItem extends CLegacyWebTest {
 					'trends' => 788400001,
 					'error_msg' => 'Cannot add item',
 					'errors' => [
-							'Incorrect value for field "trends": must be between "86400" and "788400000".'
+						'Incorrect value for field "trends": value must be one of 0, 86400-788400000.'
 					]
 				]
 			],
@@ -1763,7 +1763,7 @@ class testFormItem extends CLegacyWebTest {
 					'trends' => 86399,
 					'error_msg' => 'Cannot add item',
 					'errors' => [
-							'Incorrect value for field "trends": must be between "86400" and "788400000".'
+						'Incorrect value for field "trends": value must be one of 0, 86400-788400000.'
 					]
 				]
 			],
@@ -1977,7 +1977,7 @@ class testFormItem extends CLegacyWebTest {
 					'key' => 'item-ipmi-agent-error',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "IPMI sensor": cannot be empty.'
+						'Incorrect value for field "IPMI sensor": cannot be empty.'
 					]
 				]
 			],
@@ -2001,8 +2001,8 @@ class testFormItem extends CLegacyWebTest {
 					'key' => 'item-ssh-agent-error',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "User name": cannot be empty.',
-							'Incorrect value for field "Executed script": cannot be empty.'
+						'Incorrect value for field "User name": cannot be empty.',
+						'Incorrect value for field "Executed script": cannot be empty.'
 					]
 				]
 			],
@@ -2014,8 +2014,8 @@ class testFormItem extends CLegacyWebTest {
 					'key' => 'item-telnet-agent-error',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "User name": cannot be empty.',
-							'Incorrect value for field "Executed script": cannot be empty.'
+						'Incorrect value for field "User name": cannot be empty.',
+						'Incorrect value for field "Executed script": cannot be empty.'
 					]
 				]
 			],
@@ -2059,7 +2059,7 @@ class testFormItem extends CLegacyWebTest {
 					'key' => 'item-calculated',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "Formula": cannot be empty.'
+						'Incorrect value for field "Formula": cannot be empty.'
 					]
 				]
 			],
@@ -2072,7 +2072,7 @@ class testFormItem extends CLegacyWebTest {
 					'params_ap' => 'query',
 					'error_msg' => 'Cannot add item',
 					'errors' => [
-							'Check the key, please. Default example was passed.'
+						'Check the key, please. Default example was passed.'
 					]
 				]
 			],
@@ -2086,7 +2086,7 @@ class testFormItem extends CLegacyWebTest {
 					'params_es' => 'script to be executed',
 					'error_msg' => 'Cannot add item',
 					'errors' => [
-							'Check the key, please. Default example was passed.'
+						'Check the key, please. Default example was passed.'
 					]
 				]
 			],
@@ -2100,7 +2100,7 @@ class testFormItem extends CLegacyWebTest {
 					'params_es' => 'script to be executed',
 					'error_msg' => 'Cannot add item',
 					'errors' => [
-							'Check the key, please. Default example was passed.'
+						'Check the key, please. Default example was passed.'
 					]
 				]
 			],
@@ -2113,7 +2113,7 @@ class testFormItem extends CLegacyWebTest {
 					'username' => 'zabbix',
 					'error_msg' => 'Page received incorrect data',
 					'errors' => [
-							'Incorrect value for field "Key": cannot be empty.'
+						'Incorrect value for field "Key": cannot be empty.'
 					]
 				]
 			]
